Fixed spacing issues for tiles, cards, and logo on a two player table.  Going to use this as a template to add another file for each table type.

--- a/poker-hand-commentator/src/Components/Card.css
+++ b/poker-hand-commentator/src/Components/Card.css
@@ -7,6 +7,7 @@
     justify-content: center;
     display: flex;
     margin:2px;
+    background-color: #FF7F50;
 
 }
 
