--- a/poker-hand-commentator/src/Components/Table.css
+++ b/poker-hand-commentator/src/Components/Table.css
@@ -9,6 +9,12 @@
     background-color: #708090;   
 }
 
+
+
+#logo{
+    margin: 3%;
+}
+
 .CardBracket{
     border-bottom-width: 4px;
     border: solid;
@@ -17,6 +23,19 @@
     width: 500px;
     height: 120px;
     border-top: #708090;
-    
-
+    margin: 3%;
+}
+.PlayerTile-Top-Center{
+    margin-top: 5px;
+}
+.PlayerTile-Bottom-Center{
+    margin-top: 80px;
+}
+.CardRow{
+    margin-left:10%;
+}
+.CardBracket-Column{
+    justify-content: center;
+    float: left;
+    margin: 3%;
 }
